--- a/src/vi/hangtruyen/build.gradle
+++ b/src/vi/hangtruyen/build.gradle
@@ -1,10 +1,8 @@
 ext {
     extName = 'HangTruyen'
     extClass = '.HangTruyen'
-    themePkg = 'wpcomics'
-    baseUrl = 'https://hangtruyen.net'
-    overrideVersionCode = 0
-    isNsfw = false
+    extVersionCode = 1
+    isNsfw = true
 }
 
 apply from: "$rootDir/common.gradle"
