BigSolo: Add www subdomain to Manifest

--- a/src/fr/bigsolo/AndroidManifest.xml
+++ b/src/fr/bigsolo/AndroidManifest.xml
@@ -17,6 +17,10 @@
                     android:host="bigsolo.org"
                     android:pathPattern="/..*"
                     android:scheme="https" />
+                <data
+                    android:host="www.bigsolo.org"
+                    android:pathPattern="/..*"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
     </application>
