--- a/src/en/kagane/build.gradle
+++ b/src/en/kagane/build.gradle
@@ -6,3 +6,7 @@ ext {
 }
 
 apply from: "$rootDir/common.gradle"
+
+dependencies {
+    compileOnly("com.squareup.okhttp3:okhttp-brotli:5.0.0-alpha.11")
+}
