MangaNova: Bad isNsfw in build.gradle

--- a/src/fr/manganova/build.gradle
+++ b/src/fr/manganova/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'MangaNova'
     extClass = '.MangaNova'
     extVersionCode = 1
-    isNsfw = true
+    isNsfw = false
 }
 
 apply from: "$rootDir/common.gradle"
