--- a/src/all/manhuarm/build.gradle
+++ b/src/all/manhuarm/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Manhuarm'
     extClass = '.ManhuarmFactory'
     themePkg = 'madara'
-    baseUrl = 'https://manhuarm.com'
-    overrideVersionCode = 3
+    baseUrl = 'https://manhuarmmtl.com'
+    overrideVersionCode = 4
     isNsfw = true
 }
 
