--- a/src/pt/mediocretoons/build.gradle
+++ b/src/pt/mediocretoons/build.gradle
@@ -1,8 +1,8 @@
 ext {
     extName = 'Mediocre Toons'
     extClass = '.MediocreToons'
-    baseUrl = 'https://mediocretoons.com'
-    extVersionCode = 10
+    baseUrl = 'https://mediocretoons.site'
+    extVersionCode = 7
     isNsfw = true
 }
 
