--- a/src/tr/hayalistic/build.gradle
+++ b/src/tr/hayalistic/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Hayalistic'
     extClass = '.Hayalistic'
     themePkg = 'madara'
-    baseUrl = 'https://hayalistic.net/'
+    baseUrl = 'https://hayalistic.net'
     overrideVersionCode = 3
     isNsfw = false
 }
