--- a/src/ja/comico/build.gradle
+++ b/src/ja/comico/build.gradle
@@ -1,7 +1,7 @@
 ext {
     extName = 'Comico'
-    extClass = '.ComicoFactory'
-    extVersionCode = 7
+    extClass = '.Comico'
+    extVersionCode = 1
     isNsfw = true
 }
 
