fix SussyToons: consertando a extensão para utilizar nova api
- add nova api

- remover lib-multisrc greenshit

- add filtros

- consertar pesquisa

--- a/src/pt/sussyscan/build.gradle
+++ b/src/pt/sussyscan/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Sussy Toons'
     extClass = '.SussyToons'
     baseUrl = 'https://www.sussytoons.wtf'
-    overrideVersionCode = 57
+    extVersionCode = 63
     isNsfw = true
 }
 
