greenshit: refatorando a lib
- aba popular maidscan

- aba latest maidscan

- aba filtro maidscan

--- a/src/pt/maidscan/build.gradle
+++ b/src/pt/maidscan/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Maid Scan'
     extClass = '.MaidScan'
     themePkg = 'greenshit'
-    baseUrl = 'https://novo.empreguetes.site'
-    overrideVersionCode = 46
+    baseUrl = 'https://empreguetes.xyz/'
+    overrideVersionCode = 47
     isNsfw = true
 }
 
