--- a/src/pt/mangalivre/build.gradle
+++ b/src/pt/mangalivre/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Manga Livre'
     extClass = '.MangaLivre'
     themePkg = 'madara'
-    baseUrl = 'https://mangalivre.tv'
-    overrideVersionCode = 1
+    baseUrl = 'https://mangalivre.to'
+    overrideVersionCode = 3
 }
 
 apply from: "$rootDir/common.gradle"
