Remove the trailing slash

--- a/src/id/hwago/build.gradle
+++ b/src/id/hwago/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Hwago'
     extClass = '.Hwago'
     themePkg = 'madara'
-    baseUrl = 'https://01.hwago.xyz/'
+    baseUrl = 'https://01.hwago.xyz'
     overrideVersionCode = 3
     isNsfw = false
 }
