NatsuId multisrc: Natsu (id), Ikiru (id), Kiryuu (id), rawkuma (ja) (#11592)
* 1

* 2

* 3

* fix ikiru with json cleaner

* cleaning

* also clean json for parsing genre list

* dse

* saving manga ID to desc so only use call once

* fix okhttp client building override and cleanup

---------

Co-authored-by: AwkwardPeak7 <48650614+AwkwardPeak7@users.noreply.github.com>

--- a/src/id/kiryuu/build.gradle
+++ b/src/id/kiryuu/build.gradle
@@ -1,9 +1,9 @@
 ext {
     extName = 'Kiryuu'
     extClass = '.Kiryuu'
-    themePkg = 'mangathemesia'
+    themePkg = 'natsuid'
     baseUrl = 'https://kiryuu03.com'
-    overrideVersionCode = 14
+    overrideVersionCode = 44
     isNsfw = false
 }
 
