updated build file to remove mentions of MangaThemsia

--- a/src/ar/mangaswat/build.gradle
+++ b/src/ar/mangaswat/build.gradle
@@ -1,9 +1,8 @@
 ext {
     extName = 'MangaSwat'
     extClass = '.MangaSwat'
-    themePkg = 'mangathemesia'
     baseUrl = 'https://appswat.com'
-    overrideVersionCode = 27
+    extVersionCode = 57
     isNsfw = false
 }
 
