--- a/src/pt/mangalivre/build.gradle
+++ b/src/pt/mangalivre/build.gradle
@@ -9,5 +9,6 @@ ext {
 apply from: "$rootDir/common.gradle"
 
 dependencies {
+    implementation project(':lib:cookieinterceptor')
     implementation project(':lib:randomua')
 }
