--- a/src/pt/egotoons/build.gradle
+++ b/src/pt/egotoons/build.gradle
@@ -1,9 +1,8 @@
 ext {
     extName = 'Ego Toons'
     extClass = '.EgoToons'
-    themePkg = 'zerotheme'
-    baseUrl = 'https://egotoons.com'
-    overrideVersionCode = 2
+    baseUrl = 'https://www.egotoons.com'
+    extVersionCode = 6
     isNsfw = true
 }
 
