--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 kotlin = "1.7.21"
 coroutines = "1.6.4"
 serialization = "1.4.0"
+okhttp = "5.0.0-alpha.11"
 
 [libraries]
 gradle-agp = { module = "com.android.tools.build:gradle", version = "8.13.0" }
@@ -21,7 +22,8 @@ coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-androi
 injekt-core = { module = "com.github.null2264.injekt:injekt-core", version = "4135455a2a" }
 rxjava = { module = "io.reactivex:rxjava", version = "1.3.8" }
 jsoup = { module = "org.jsoup:jsoup", version = "1.15.1" }
-okhttp = { module = "com.squareup.okhttp3:okhttp", version = "5.0.0-alpha.11" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 quickjs = { module = "app.cash.quickjs:quickjs-android", version = "0.9.2" }
 
 [bundles]
