--- a/src/vi/hentaicube/build.gradle
+++ b/src/vi/hentaicube/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'CBHentai'
     extClass = '.HentaiCB'
     themePkg = 'madara'
-    baseUrl = 'https://hentaicb.live'
-    overrideVersionCode = 21
+    baseUrl = 'https://2tencb.top'
+    overrideVersionCode = 22
     isNsfw = true
 }
 
