--- a/src/all/mangataro/build.gradle
+++ b/src/all/mangataro/build.gradle
@@ -1,7 +1,7 @@
 ext {
     extName = 'MangaTaro'
-    extClass = '.MangaTaro'
-    extVersionCode = 6
+    extClass = '.MangaTaroFactory'
+    extVersionCode = 7
     isNsfw = false
 }
 
