Removed stupid comments.

--- a/src/en/rinkocomics/build.gradle
+++ b/src/en/rinkocomics/build.gradle
@@ -1,6 +1,6 @@
 ext {
     extName = 'Rinko Comics'
-    extClass = '.RinkoComics' // [FIX] Capital C to match the class
+    extClass = '.RinkoComics'
     extVersionCode = 1
     isNsfw = false
 }
