Fix SpectralScan: change url, change source name, preserve id, fix 'popular', 'latest', 'search', 'filters' and 'pages'

--- a/src/pt/spectralscan/build.gradle
+++ b/src/pt/spectralscan/build.gradle
@@ -1,7 +1,7 @@
 ext {
-    extName = 'Spectral Scan'
-    extClass = '.SpectralScan'
-    extVersionCode = 48
+    extName = 'Nexus Scan'
+    extClass = '.NexusScan'
+    extVersionCode = 49
     isNsfw = false
 }
 
