--- a/src/pt/spectralscan/build.gradle
+++ b/src/pt/spectralscan/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Nexus Scan'
     extClass = '.NexusScan'
     extVersionCode = 49
-    isNsfw = false
+    isNsfw = true
 }
 
 apply from: "$rootDir/common.gradle"
